# orderbook

./: Makefile  README.md  pyproject.toml
src/: __main__.py
src/app/: __init__.py  app.py
src/internal/callbacks/: __init__.py  callbacks.py
src/internal/services/: layout.py  orderbook.py
src/pkg/settings/: __init__.py  settings.py
